<resources>
    <string name="app_name">MyNotification</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Meeting Event Details</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="check_meeting">Check Meeting</string>
    <string name="show_notification_after_5_seconds">Show Notification after 5 seconds</string>
    <string name="show_notification">Show Notification</string>
    <string name="are_notifications_enabled">areNotificationsEnabled</string>
    <string name="category">Category</string>
    <string name="priority">Priority</string>
    <string name="badge_icon_type">Badge Icon Type</string>
    <string name="delay_time">Delay Time</string>
    <string name="second_s">second(s)</string>
    <string name="ischannelenabled">isChannelEnabled</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="content">Content</string>
    <string name="importance">Importance</string>
    <string name="action_button_1">Action Button 1</string>
    <string name="action_button_2">Action Button 2</string>
    <string name="autocancel">autoCancel</string>
    <string name="set_badge">setBadge</string>
    <string name="badge_count">Badge Count</string>

    <string-array name="notification_importance">
        <item>IMPORTANCE_NONE</item>
        <item>IMPORTANCE_MIN</item>
        <item>IMPORTANCE_LOW</item>
        <item>IMPORTANCE_DEFAULT</item>
        <item>IMPORTANCE_HIGH</item>
        <item>IMPORTANCE_MAX</item>
    </string-array>
    <integer-array name="notification_importance_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </integer-array>
    <string-array name="notification_categories">
        <item>CATEGORY_ALARM</item>
        <item>CATEGORY_CALL</item>
        <item>CATEGORY_EMAIL</item>
        <item>CATEGORY_ERROR</item>
        <item>CATEGORY_EVENT</item>
        <item>CATEGORY_LOCATION_SHARING</item>
        <item>CATEGORY_MESSAGE</item>
        <item>CATEGORY_MISSED_CALL</item>
        <item>CATEGORY_NAVIGATION</item>
        <item>CATEGORY_PROGRESS</item>
        <item>CATEGORY_PROMO</item>
        <item>CATEGORY_RECOMMENDATION</item>
        <item>CATEGORY_REMINDER</item>
        <item>CATEGORY_SERVICE</item>
        <item>CATEGORY_SOCIAL</item>
        <item>CATEGORY_STATUS</item>
        <item>CATEGORY_STOPWATCH</item>
        <item>CATEGORY_SYSTEM</item>
        <item>CATEGORY_TRANSPORT</item>
        <item>CATEGORY_WORKOUT</item>
    </string-array>
    <string-array name="notification_categories_values">
        <item>alarm</item>
        <item>call</item>
        <item>email</item>
        <item>err</item>
        <item>event</item>
        <item>location_sharing</item>
        <item>msg</item>
        <item>missed_call</item>
        <item>navigation</item>
        <item>progress</item>
        <item>promo</item>
        <item>recommendation</item>
        <item>reminder</item>
        <item>service</item>
        <item>social</item>
        <item>status</item>
        <item>stopwatch</item>
        <item>sys</item>
        <item>transport</item>
        <item>workout</item>
    </string-array>

    <string-array name="notification_priorities">
        <item>PRIORITY_DEFAULT</item>
        <item>PRIORITY_LOW</item>
        <item>PRIORITY_MIN</item>
        <item>PRIORITY_HIGH</item>
        <item>PRIORITY_MAX</item>
    </string-array>
    <integer-array name="notification_priorities_values">
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
        <item>1</item>
        <item>2</item>
    </integer-array>
    <string-array name="notification_badge_icons">
        <item>BADGE_ICON_NONE</item>
        <item>BADGE_ICON_SMALL</item>
        <item>BADGE_ICON_LARGE</item>
    </string-array>
    <integer-array name="notification_badge_icons_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </integer-array>

    <string name="use_fixed_notification_id">Use Fixed Notification ID (1001)</string>

</resources>